2006-06-08  Nate Nielsen  <nielsen@memberwebs.com>

    * configure.in:
    * agent/Makefile.am:
    * agent/seahorse-agent-ssh.c:
    * agent/seahorse-agent.c:
    * agent/seahorse-agent.h:
    * daemon/seahorse-daemon.c:
    * libseahorse/seahorse-ssh-key.c:
    * libseahorse/seahorse-ssh-key.h:
    * libseahorse/seahorse-ssh-key-properties.c: Add rudimentary but working
    SSH agent proxy support. Bug #341986
    
2006-06-07  Adam Schreiber  <sadam@clemson.edu>

    * pixmpas/22x22/Makefile.am:
    * pixmaps/22x22/seahorse-sign-ok.png(added):
    * pixmaps/22x22/seahorse-sign-ok.svg(added):
    * pixmaps/22x22/seahorse-sign-bad.png(added):
    * pixmaps/22x22/seahorse-sign-bad.svg(added): Add 
    22x22 icons for signing

2006-05-24  Adam Schreiber  <sadam@clemson.edu>

    * agent/seahorse-agent-prompt.c:
    * libseahorse/seahorse-check-button-control.c:
    * libseahorse/seahorse-check-button-control.h:
    * libseahorse/seahorse-prefs.c:
    * libseahorse/seahorse-prefs.glade:
    * src/seahorse-preferences.c: Remove deprecated 
    seahorse_check_button_control_new. Bug #338743 

2006-05-18  Adam Schreiber  <sadam@clemson.edu>
    
    * src/seahorse-generate-select.c: Make dialog activate
    on double click of items in treeview.
    
2006-05-16  Adam Schreiber <sadam@clemson.edu>

    * src/seahorse-key-properties.c: Remove extra include.

2006-05-16  Nate Nielsen  <nielsen@memberwebs.com>

    * libseahorse/seahors-check-button-control.c: Don't crash
    when schema isn't installed.
    
2006-05-16  Adam Schreiber  <sadam@clemson.edu>

    * src/seahorse-key-properties.c:
    * src/seahorse-pgp-private-key-properties.glade:
    * src/seahorse-pgp-public-key-properties.glade: Double click on key
    on 'Trust' or 'Names' pages opens the key's properties (Bug #342005).

2006-06-16  Nate Nielsen  <nielsen@memberwebs.com>

    * libseahorse/seahorse-gpgmex-util.c: Fix typo which caused
    freeing of in use memory.
    * daemon/seahorse-service-crypto.c: