@@ -1,3 +1,11 @@
+2006-06-09  Nate Nielsen  <nielsen@memberwebs.com>
+
+    * agent/seahorse-agent-ssh.c:
+    * libseahorse/seahorse-ssh-askpass.c:
+    * libseahorse/seahorse-ssh-operation.c:
+    * libseahorse/seahorse-ssh-operation.h: Add support for saving SSH
+    passwords in gnome-keyring. Bug #341986
+    
 2006-06-08  Nate Nielsen  <nielsen@memberwebs.com>
 
     * configure.in:
